Make sure text does not hide behind the trees. DDSDK-402

--- a/web/themes/custom/mungo/assets_src/sass/layout/footer.scss
+++ b/web/themes/custom/mungo/assets_src/sass/layout/footer.scss
@@ -4,6 +4,11 @@ footer {
   }
 }
 
+.region-footer-contact {
+  position: relative;
+  z-index: 3;
+}
+
 #block-facebookpagesinfooter {
   margin-bottom:$spacing-large;
 }
